# doc-redaction

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  agentic_workflow.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: add_issue_to_project_sync.yaml  main.yml
agentic_workflow/: index.html
architecture/: index.html
data/confidential/: rocketbase_aws_agreement.json  spielbank_rocketbase_dienstleistungsvertrag.json  spielbank_rocketbase_vertrag.json
data/markdown/: rocketbase_aws_agreement.md  spielbank_rocketbase_dienstleistungsvertrag.md  spielbank_rocketbase_vertrag.md
data/quality/: spielbank_rocketbase_vertrag.json
data/redact/: rocketbase_aws_agreement.md  spielbank_rocketbase_dienstleistungsvertrag.md  spielbank_rocketbase_vertrag.md
data/token/: spielbank_rocketbase_vertrag.json
docs/: agentic_workflow.md  geeting_started.md  getting_started.md  index.md  modules.md
getting_started/: index.html
modules/: index.html
search/: search_index.json
src/doc_redaction/: agent.py  output.py  promt.py  utils.py  workflow.py
src/doc_redaction/tool/: detect_sensitive_data.py  redact_sensitive_data.py  store_data.py  tool_utils.py
src/doc_redaction/utils/: commons.py  doc_assessment.py  doc_reader.py  token_tracker.py
tests/: test_agent.py  test_detect_sensitive_data.py  test_foo.py  test_redact_sensitive_data.py  test_store_data.py  test_tool_utils.py
