[project]
name = "doc-redaction"
version = "0.0.1"
description = "Document Redaction Automation Service"
authors = [{ name = "Chris Schulz", email = "chris.schulz13@yahoo.de" }]
readme = "README.md"
keywords = ['python', 'aws', 'aws-bedrock', 'ai', 'llm', 'document-processing']
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bedrock-agentcore>=0.1.5",
    "bedrock-agentcore-starter-toolkit>=0.1.14",
    "boto3>=1.40.41",
    "loguru>=0.7.3",
    "mlx-vlm>=0.3.3",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.9",
    "strands-agents[ollama]>=1.10.0",
    "uv>=0.8.22",
]

[project.urls]
Homepage = "https://deadhand777.github.io/doc-redaction/"
Repository = "https://github.com/deadhand777/doc-redaction"
Documentation = "https://deadhand777.github.io/doc-redaction/"


[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=4.3.0",
    "tox-uv>=1.28.0",
    "ty>=0.0.1a21",
    "ruff>=0.11.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.1",
    "directory-tree>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_redaction"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 180
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
